# galactic-streamhub

./: .env.example  .gitignore  Dockerfile  LICENSE  README.MD  agent_config.py  callback_mod.py  callbacks.py  chunk.py  clinical_trials_pipeline.py  delete_corpus.py  download_nltk_data.py  download_tcia_data.py  ingest_clinical_trials.py  ingest_multimodal_data.py  ingress.yaml  kubernetes-deployment.yaml  kubernetes-service.yaml  main.py  managed-certificate.yaml  mod.py  mongo_memory.py  openfda_pipeline.py  proactive_agents.py  pubmed_pipeline.py  pyproject.toml  user_memory_agents.py
.idx/: dev.nix
data/: ctg-studies.csv
data/tcia_lidc_idri/1.3.6.1.4.1.14519.5.2.1.6279.6001.186489439482736342984904886237/: LICENSE
deployment/: README.md  backend-config.yaml  kubernetes-hpa.yaml  kubernetes-service.yaml
google_search_agent/: agent.py  evalset6aca2c.evalset.json
google_search_agent/.adk/eval_history/: google_search_agent_evalset6aca2c_1751629666.897142.evalset_result.json  google_search_agent_evalset6aca2c_1751629800.387669.evalset_result.json  google_search_agent_evalset6aca2c_1751629872.510678.evalset_result.json
main_agent/: __init__.py  agent.py  cocktailsEval.evalset.json
main_agent/.adk/eval_history/: main_agent_cocktailsEval_1751635272.579658.evalset_result.json  main_agent_cocktailsEval_1751637653.16715.evalset_result.json
static/: index.html  user_guide.html
static/css/: style.css
static/js/: app.js  firebase-chat.js
tools/: chart_tool.py  json_chart_formatter.py  tts_tool.py  user_profile_tools.py  web_utils.py
