[project]
name = "adk-multiagent-mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "google-adk>=1.1.1",
    "google-generativeai>=0.8.5",
    "google-cloud>=0.34.0",
    "mcp>=1.6.0",
    "uvicorn>=0.34.1",
    "google-cloud-logging >= 3.11.3",
    "pymongo >= 4.10.1",
    "pandas >= 2.2.3",
    "pyarrow >= 20.0.0",
    "pandas-gbq>= 0.29.0"
]
